package.json bug fixed

--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "server": "nodemon backend/server.js",
     "client": "npm start --prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "data:import": "node backend/seeder.js",
-    "data:destroy": "node backend/seeder.js -d",
-    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
+    "data:import": "node backend/seeder",
+    "data:destroy": "node backend/seeder -d",
+    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend",
+    "generate-toc": "markdown-toc -i readme.md"
   },
   "author": "Arman Barseghyan",
   "license": "ISC",
@@ -19,14 +20,16 @@
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.1",
-    "mongoose": "^7.3.1",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.0.1",
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
-    "concurrently": "^8.2.0",
-    "dotenv": "^16.3.1",
-    "nodemon": "^2.0.22"
+    "@types/express": "^4.17.17",
+    "concurrently": "^7.6.0",
+    "markdown-toc": "^1.2.0",
+    "nodemon": "^2.0.21"
   }
 }
